medimetrics-enterprise/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medimetrics
  labels:
    name: medimetrics
